# dummy_plonk

./: .gitignore  Cargo.toml  README.md  test.out
src/: kzg10.rs  lib.rs  macros.rs  permutation_check.rs  plonk.rs  polynomial.rs  prover.rs  transcript.rs  verifier.rs
