[package]
name = "dummy-plonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pairing = "0.22.0"
group = "0.12.0"
ff = "0.12.0"
bls12_381 = "0.7.1"
rand_core = "0.6.1"
rand = "0.8.5"
blake2 = "0.9.2"
rand_chacha = "0.3.1"
