[package]
name = "dummy-plonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blstrs = "0.6.1"
ff = "0.12.0"
group = "0.12.0"
rand_core = "0.6.1"
rand = "0.8.5"
blake2 = "0.10.6"
rand_chacha = "0.3.1"
